Issue #2647006 by mark.labrecque, bisonbleu, leahtard: System messages with long strings unduly stretch the container on mobiles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -147,6 +147,7 @@ div.messages
   color: #003366
   background: #bbddff
   border: 1px solid #aaccee
+  word-wrap: break-word
 
 div.warning
   color: #884400
